some changes added

--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
             </a>
           </div>
 
-          <div class="solution">
-            <a href="#">
-              <div class="future-content">
-                <i class="fa-solid fa-chart-pie solution-icon"></i>
-                <h3>Inovative Solutions.</h3>
-                <p>
-                  The generated Lorem Ipsum is therefore <br />
-                  always free from repetition, injected <br />
-                  humour.
-                </p>
-              </div>
-            </a>
+          <div class="after-div">
+            <div class="solution">
+              <a href="#">
+                <div class="future-content">
+                  <i class="fa-solid fa-chart-pie solution-icon"></i>
+                  <h3>Inovative Solutions.</h3>
+                  <p>
+                    The generated Lorem Ipsum is therefore <br />
+                    always free from repetition, injected <br />
+                    humour.
+                  </p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -162,20 +164,20 @@
         </div>
         <div class="main-works">
           <div class="product">
+            <div class="overlay"></div>
             <a href="">
-              <div id="overlay"></div>
               <img src="./src/img/product.jpg" alt="" />
             </a>
           </div>
           <div class="woody">
+            <div class="overlay"></div>
             <a href="">
-              <div id="overlay"></div>
               <img src="./src/img/woody.jpg" alt="" />
             </a>
           </div>
           <div class="interior">
-            <a href=""
-              ><div id="overlay"></div>
+            <div class="overlay"></div>
+            <a href="">
               <img src="./src/img/interior.jpg" alt="" />
             </a>
           </div>
@@ -196,10 +198,19 @@
           </div>
         </div>
         <div class="about-imgs">
-          <div class="teamwork-img"></div>
+          <div class="teamwork">
+            <div class="overlay"></div>
+            <img src="./src/img/teamwork.jpg" />
+          </div>
           <div class="img2">
-            <div class="philosopy"></div>
-            <div class="office"></div>
+            <div class="philosophy">
+              <div class="overlay"></div>
+              <img src="./src/img/philosophy.jpg" />
+            </div>
+            <div class="office">
+              <div class="overlay"></div>
+              <img src="./src/img/teamwork.jpg" />
+            </div>
           </div>
         </div>
       </section>
